# lean_inspect

./: .gitignore  README.md  main.py  pyproject.toml
lean_inspect/: __init__.py  cli.py  docgen.py  html_trace.py  lsp_trace.py
