[project]
name = "lean-inspect"
version = "0.1.0"
description = "Generate Lean goal traces and wire them into doc-gen output"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lean_inspect"]

[project.scripts]
lean-inspect = "lean_inspect.cli:main"
